--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "underscore": "~1.4.4",
     "async": "~0.2.5",
     "request": "~2.12.0",
-    "coffee-script": "~1.4.0"
+    "coffee-script": "~1.4.0",
+    "date-utils": "~1.2.12"
   }
 }
